[gd_scene load_steps=14 format=3 uid="uid://dtdmydveml1qo"]

[ext_resource type="PackedScene" uid="uid://cjhdw834up25y" path="res://Scenes/player.tscn" id="1_fsalu"]
[ext_resource type="Material" uid="uid://d23tfjs54xdnt" path="res://Materials/grid.tres" id="1_hb2xm"]
[ext_resource type="PackedScene" uid="uid://dmpmqxxsh0fa8" path="res://Models/Hole.blend" id="2_5rhcw"]
[ext_resource type="Script" uid="uid://36vuvj7e7vdq" path="res://Scenes/camera_scipt.gd" id="3_50ct6"]
[ext_resource type="Script" uid="uid://cxw2tnvpcbabq" path="res://Scenes/player_center.gd" id="4_ak5v8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_r67dt"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_vwkjv"]
sky_material = SubResource("ProceduralSkyMaterial_r67dt")

[sub_resource type="Environment" id="Environment_s7xkp"]
background_mode = 2
sky = SubResource("Sky_vwkjv")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="QuadMesh" id="QuadMesh_8eeh5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_h6ddg"]

[sub_resource type="SphereMesh" id="SphereMesh_ak5v8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_50ct6"]
size = Vector3(5, 1, 3)

[sub_resource type="BoxMesh" id="BoxMesh_hb2xm"]

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_s7xkp")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 3.55271e-15, 0, 3.55271e-15, 1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(45, 0, 0, 0, -1.96701e-06, 45, 0, -45, -1.96701e-06, 0, 0, 0)
material_override = ExtResource("1_hb2xm")
mesh = SubResource("QuadMesh_8eeh5")

[node name="Player" parent="." instance=ExtResource("1_fsalu")]

[node name="Hole" parent="." instance=ExtResource("2_5rhcw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -25, 0)

[node name="HoleCollider" type="CollisionShape3D" parent="Hole"]
transform = Transform3D(6, 0, 0, 0, 2, 0, 0, 0, 6, 0, 2, 0)
shape = SubResource("CylinderShape3D_h6ddg")

[node name="ExitPos" type="Node3D" parent="Hole"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="ExitCollider" type="CollisionShape3D" parent="Hole/ExitPos"]
transform = Transform3D(6, 0, 0, 0, 1, 0, 0, 0, 6, 0, 0, 0)
shape = SubResource("CylinderShape3D_h6ddg")

[node name="HoleSpawn" type="Node3D" parent="Hole"]

[node name="HoleCam" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, -14.425, 9.705)

[node name="PlayerCenter" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("4_ak5v8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerCenter"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 2, 0)
mesh = SubResource("SphereMesh_ak5v8")

[node name="CameraPos" type="Node3D" parent="PlayerCenter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 20)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 20)
current = true
fov = 30.0
size = 11.476
script = ExtResource("3_50ct6")

[node name="Area3D" type="Area3D" parent="Camera3D"]
disable_mode = 2
collision_layer = 3
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 2.6974e-06, -28.2843)
shape = SubResource("BoxShape3D_50ct6")
debug_color = Color(0.96, 0, 0.496, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D/Area3D/CollisionShape3D"]
transform = Transform3D(16, 0, 0, 0, 0.5, 0, 0, 0, 9, 0, 0.017139, 1.53227e-09)
mesh = SubResource("BoxMesh_hb2xm")

[node name="Area3D2" type="Area3D" parent="Camera3D"]
disable_mode = 2
collision_layer = 3
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/Area3D2"]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 2.6974e-06, -28.2843)
shape = SubResource("BoxShape3D_50ct6")
debug_color = Color(0.96, 0, 0.496, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D/Area3D2/CollisionShape3D"]
transform = Transform3D(10, 0, 0, 0, 2, 0, 0, 0, 6, 0, -0.342785, -3.06472e-08)
mesh = SubResource("BoxMesh_hb2xm")

[node name="OffsetTimer" type="Timer" parent="Camera3D"]
wait_time = 0.5
one_shot = true
ignore_time_scale = true

[connection signal="body_entered" from="Camera3D/Area3D" to="Camera3D" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Camera3D/Area3D" to="Camera3D" method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="Camera3D/Area3D2" to="Camera3D" method="_on_area_3d_2_body_entered"]
[connection signal="body_exited" from="Camera3D/Area3D2" to="Camera3D" method="_on_area_3d_2_body_exited"]
